tests/baselines/reference/-57087-04.errors.txt
-57087-04.ts(27,7): error TS1360: Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' does not satisfy the expected type 'A & B & C'.
  Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' is not assignable to type 'A'.
    Type '"1"' is not assignable to type '"10"'.
-57087-04.ts(28,7): error TS1360: Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' does not satisfy the expected type 'A & C & B'.
  Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' is not assignable to type 'A'.
-57087-04.ts(29,7): error TS1360: Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' does not satisfy the expected type 'B & A & C'.
  Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' is not assignable to type 'B'.
    Types of parameters 'x' and 'x' are incompatible.
      Type '3' is not assignable to type '1'.
-57087-04.ts(30,7): error TS1360: Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' does not satisfy the expected type 'B & C & A'.
  Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' is not assignable to type 'B'.
-57087-04.ts(31,7): error TS1360: Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' does not satisfy the expected type 'C & A & B'.
  Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' is not assignable to type 'C'.
    Types of parameters 'x' and 'x' are incompatible.
      Type '2' is not assignable to type '1'.
-57087-04.ts(32,7): error TS1360: Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' does not satisfy the expected type 'C & B & A'.
  Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' is not assignable to type 'C'.
-57087-04.ts(44,7): error TS1360: Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' does not satisfy the expected type 'W'.
  Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' is not assignable to type 'A & B & C'.


==== -57087-04.ts (7 errors) ====
    interface C {
      (x:1):"1";
      (x:2):"20";
      (x:number):number | "1" | "20";
    };
    interface B {
      (x:2):"2"
      (x:3):"30"
      (x:number):number | "2" | "30";
    };
    interface A {
      (x:3):"3"
      (x:1):"10"
      (x:number):number | "3" | "10";
    };
    
      function foo(x:1):"1";
      function foo(x:2):"2";
      function foo(x:3):"3";
      function foo(x:number):number|"1"|"2"|"3";
      function foo(x:number):number|"1"|"2"|"3"{
        if (x==1||x==2||x==3) return String(x) as any;
        return x;
      }
    
      // The `&`-intersection operator result should be independent of the order of it's operands.
      foo satisfies A & B & C;
          ~~~~~~~~~
!!! error TS1360: Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' does not satisfy the expected type 'A & B & C'.
!!! error TS1360:   Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' is not assignable to type 'A'.
!!! error TS1360:     Type '"1"' is not assignable to type '"10"'.
      foo satisfies A & C & B;
          ~~~~~~~~~
!!! error TS1360: Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' does not satisfy the expected type 'A & C & B'.
!!! error TS1360:   Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' is not assignable to type 'A'.
      foo satisfies B & A & C;
          ~~~~~~~~~
!!! error TS1360: Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' does not satisfy the expected type 'B & A & C'.
!!! error TS1360:   Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' is not assignable to type 'B'.
!!! error TS1360:     Types of parameters 'x' and 'x' are incompatible.
!!! error TS1360:       Type '3' is not assignable to type '1'.
      foo satisfies B & C & A;
          ~~~~~~~~~
!!! error TS1360: Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' does not satisfy the expected type 'B & C & A'.
!!! error TS1360:   Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' is not assignable to type 'B'.
      foo satisfies C & A & B;
          ~~~~~~~~~
!!! error TS1360: Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' does not satisfy the expected type 'C & A & B'.
!!! error TS1360:   Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' is not assignable to type 'C'.
!!! error TS1360:     Types of parameters 'x' and 'x' are incompatible.
!!! error TS1360:       Type '2' is not assignable to type '1'.
      foo satisfies C & B & A;
          ~~~~~~~~~
!!! error TS1360: Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' does not satisfy the expected type 'C & B & A'.
!!! error TS1360:   Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' is not assignable to type 'C'.
    
      type W = (A & B & C)|(A & C & B)|(B & A & C)|(B & C & A)|(C & A & B)|(C & B & A);
      declare const w:W;
      w(1);// "1","10"
      w(2);// "2","20"
      w(3);// "3","30"
    
      foo(1); // "1"
      foo(2); // "2"
      foo(3); // "3"
    
      foo satisfies W;
          ~~~~~~~~~
!!! error TS1360: Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' does not satisfy the expected type 'W'.
!!! error TS1360:   Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' is not assignable to type 'A & B & C'.